Ensure email addresses in contact card don't overflow at larger text sizes.

--- a/scss/components/_contact.scss
+++ b/scss/components/_contact.scss
@@ -14,3 +14,9 @@
   @extend .contact-card;
   border-color:#0282A5;
 }
+
+// Prevents long email addresses from overflowing the side column at large text sizes/magnification
+#contact_channels_team_email {
+  overflow-wrap: break-word;
+  word-wrap: break-word;
+}
